k8s/infra/overlays/local/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect to SSL
    # cert-manager.io/cluster-issuer: "selfsigned-issuer" # Use cert-manager for TLS
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - minio.k8s.local
  #     secretName: microbot-ingress-tls
  rules:
    - host: minio-api.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
    - host: minio.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9090
